# ClockTimer

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  ClockData.cpp  ClockData.h  ClockTimerFrame.cpp  ClockTimerFrame.h  Countdown.cpp  Countdown.h
test/: CMakeLists.txt  ClockDataFixture.cpp  ClockDataTest.cpp  CountdownTest.cpp
